# introduction-to-python-for-computational-science-and-engineering

./: pyproject.toml
book/: 00-index.md  01-introduction.md  02-powerful-calculator.md  03-data-types-structures.md  04-introspection.md  05-input-output.md  06-control-flow.md  07-functions-modules.md  08-functional-tools.md  09-common-tasks.md  10-matlab-to-python.md  11-python-shells.md  12-symbolic-computation.md  13-numeric-computation.md  14-numpy.md  15-visualising-data.md  16-scipy.md  17-pandas.md  18-next-steps.md  _toc.yml  index.md
