[tool.poetry]
name = "Introduction to Python for Computational Science and Engineering"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
matplotlib = "^3.3.2"
pandas = "^1.1.4"
pexpect = "^4.8.0"
python = "^3.6.1"
scipy = "^1.5.4"
sympy = "^1.6.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
jupyter-book = {git = "https://github.com/executablebooks/jupyter-book", rev = "f2b846838c35529581d1619fc4086b1b6e70c0e8"}
jupytext = "^1.6.0"
nbqa = "^0.5.5"
nbval = "^0.9.6"
pyppeteer = "^0.2.2"
sphinxcontrib-bibtex = "<2.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
